TRUS-1501 font-weight of currency and percentage updated to align with the prototype currency input field resized and the width fixed in relation to maximum input

--- a/app/assets/stylesheets/partials/_forms.scss
+++ b/app/assets/stylesheets/partials/_forms.scss
@@ -127,12 +127,12 @@ Input prefix / suffix
 =====================================
 */
 .form-control-wrapper[data-type="currency"] input {
-    max-width: 12em;
+    width: 9em;
 }
 .form-control-wrapper[data-type="currency"]:before {
     content: "£";
-    margin-right: 0.25em;
-    font-weight: 700;
+    margin-right: 0.00em;
+    font-weight: 500;
 }
 .form-control-wrapper[data-type="percentage"] input {
     max-width: 5em;
@@ -140,7 +140,7 @@ Input prefix / suffix
 .form-control-wrapper[data-type="percentage"]:after {
     content: "%";
     margin-left: 0.25em;
-    font-weight: 700;
+    font-weight: 500;
 }
 
 /*
